--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,10 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin><!--potrzebne do uruchomienia apki w heroku-->
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
